# trading_engine

./: .gitignore  .vercelignore  ARCHITECTURE.md  Cargo.toml  README.md
engine_core/: Cargo.toml
engine_core/benches/: burst.rs  insert.rs  match.rs
engine_core/src/: depth.rs  lib.rs  matching_engine.rs  order.rs  orderbook.rs  price_level.rs  side.rs  trade.rs  utils.rs
engine_core/tests/: matching.rs
engine_core/tests/common/: mod.rs
engine_wasm/: cargo.toml  package-lock.json  package.json
engine_wasm/src/: lib.rs
src/: main.rs  matching_engine.rs  order.rs  orderbook.rs  price_level.rs  side.rs  trade.rs
ui/: readme.md
ui/orderbook-ui/: index.html  package-lock.json  package.json
ui/orderbook-ui/src/: App.css  App.jsx  index.css
ui/orderbook-ui/src/components/: DepthPanel.jsx  MarketMakerPanel.jsx  MetricsPanel.jsx  OpenOrdersPanel.jsx  OrderEntryPanel.jsx  ReplayPanel.jsx  SimulationPanel.jsx  TopBar.jsx  TradesPanel.jsx
ui/orderbook-ui/src/data/: mockOrderbook.js
