[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
rand = { version = "0.8", default-features = false, features = ["std_rng"]}
rand_chacha = "0.3"
hdrhistogram = "7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "match"
harness = false

[[bench]]
name = "burst"
harness = false